Se generan archivos css y js para el modal del detalle de articulos

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,6 +17,9 @@
     <script src="https://kit.fontawesome.com/807c729568.js" crossorigin="anonymous"></script>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/index.css" />
+    <!-----------vinculo hoja de estilo modal y js-->
+    <link rel="stylesheet" href="/css/modal.css">
+    <script src="/js/modal.js"></script>
     <!------fuente Poppins google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -91,6 +94,32 @@
               <h3 class="nombres">Villa Carlos Paz</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
+              <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/villa-carlos-paz.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle capilla
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </article>
@@ -106,6 +135,32 @@
               <h3 class="nombres">Capilla del Monte</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
+              <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/capilla.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle capilla
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </article>
@@ -121,6 +176,32 @@
               <h3 class="nombres">San Carlos Bariloche</h3>
               <h2 class="precios">$8900</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
+              <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/bariloche.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle bariloche
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </article>
@@ -136,6 +217,32 @@
             <h3 class="nombres">Cataratas del Iguazu</h3>
             <h2 class="precios">$8900</h2>
             <h4 class="tarifa">Tarifa por una persona</h4>
+            <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/cataratas.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle cataratas
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
           </div>
         </section>
     </article>
@@ -165,6 +272,32 @@
               <h3 class="nombres">Mar del plata</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
+              <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/mardel.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle mardel
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </article>
@@ -180,6 +313,32 @@
               <h3 class="nombres">Mendoza</h3>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
+              <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/mendoza.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle mendoza
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </article>
@@ -195,6 +354,32 @@
               <h3 class="nombres">Merlo</h3>
               <h2 class="precios">$8900</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
+              <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/merlo.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle merlo
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
       </article>
@@ -210,6 +395,32 @@
           <h3 class="nombres">San Carlos Bariloche</h3>
           <h2 class="precios">$8900</h2>
           <h4 class="tarifa">Tarifa por una persona</h4>
+          <button class="button-model" id="myBtn">Detalle</button>
+              <!-------------Modal-->
+              <div id="myModal" class="modal">
+                <div class="modal-content">
+                  <span class="close">&times;</span>
+                  <img src="/img/bariloche.jpg" alt="Imagen del producto">
+                  <p>
+                    detalle bariloche
+                  </p>
+                  <div class="desde-hasta">
+                    <div class="desde">
+                      <label for="desde">Desde:</label>
+                      <div>
+                        <input type="date" id="desde" value=fecha_actual>
+                      </div>
+                    </div>
+                    <div class="hasta">
+                      <label for="hasta">Hasta:</label>
+                      <div>
+                        <input type="date" id="hasta" value=fecha_actual>
+                      </div>
+                    </div>
+                    <button class="button-model">Agregar viaje</button>
+                  </div>
+                </div>
+              </div>
         </div>
       </section>
   </article>
