--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,1 +1,66 @@
 @import url(styles.css);
+
+.stylebutton {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 0 0 20px 0;
+}
+.contenedor {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+h1{
+  text-transform: capitalize;
+}
+.contenedor label {
+  margin-bottom: 5px;
+}
+
+.contenedor input {
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+}
+
+.recordarme{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.contenedor a{
+  text-decoration: none;
+  color: var(--logo);
+  font-size: 14px;
+  margin: 10px 0 0 0;
+}
+
+.linksInicio{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 0 0 20px 0;
+}
+button {
+  font-size: 14px;
+  color: white;
+  border: 2px transparent solid;
+  background-color: var(--logo);
+  border-radius: 50px;
+  justify-content: center;
+  width: 20%;
+  margin: 10px 20px 10px;
+  padding: 10px;
+  transition-property: background-color;
+  transition-duration: 450ms;
+}
+
+button:hover {
+  background-color: var(--hooverbutton);
+}
