--- a/src/views/login.html
+++ b/src/views/login.html
@@ -71,7 +71,29 @@
           </nav>
         </header>
          <!-------main------------->
-         <main></main>
+         <main>
+            <div class="contenedor">
+    
+                <h1>Ingreso</h1>
+                <div class="stylebutton">
+                    <label for="usuario">Usuario</label>
+                    <input type="text" id="usuario" placeholder="Usuario">
+                </div>
+                <div class="stylebutton">
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" placeholder="Contraseña">
+                </div>
+                <div class="recordarme">
+                    <input type="checkbox" name="recordarme" id="recordarme">
+                    <label for="recordarme">Recordarme</label>
+                </div>
+                <button type="submit">Iniciar Sesion</button>
+                <div class="linksInicio">
+                    <a href="#">Olvide mi Contraseña</a>
+                    <a href="register.html">Registrarse</a>
+                </div>
+            </div>
+        </main>
          <!--------------Redes Sociales--------------------->
         <section class="hidden-xs">
             <div class="container">
