--- a/src/views/index.html
+++ b/src/views/index.html
@@ -104,6 +104,7 @@
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
               <h3 class="nombres">Villa Carlos Paz</h3>
+              <div class="borde"></div>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
               <button class="button-model" id="myBtn">Detalle</button>
@@ -145,8 +146,11 @@
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
               <h3 class="nombres">Capilla del Monte</h3>
-              <h2 class="precios">$6700</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <div class="borde"></div>
+              <div class="precios-tarifa">
+                <h2 class="precios">$6700</h2>
+                <h4 class="tarifa">Tarifa por una persona</h4>
+              </div>  
               <button class="button-model" id="myBtn">Detalle</button>
               <!-------------Modal-->
               <div id="myModal" class="modal">
@@ -186,8 +190,11 @@
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
               <h3 class="nombres">San Carlos Bariloche</h3>
-              <h2 class="precios">$8900</h2>
-              <h4 class="tarifa">Tarifa por una persona</h4>
+              <div class="borde"></div>
+              <div class="precios-tarifa">
+                <h2 class="precios">$6700</h2>
+                <h4 class="tarifa">Tarifa por una persona</h4>
+              </div>
               <button class="button-model" id="myBtn">Detalle</button>
               <!-------------Modal-->
               <div id="myModal" class="modal">
@@ -227,6 +234,7 @@
           <i class="fa-solid fa-plane-departure"></i>
           <div class="nombres-precios">
             <h3 class="nombres">Cataratas del Iguazu</h3>
+            <div class="borde"></div>
             <h2 class="precios">$8900</h2>
             <h4 class="tarifa">Tarifa por una persona</h4>
             <button class="button-model" id="myBtn">Detalle</button>
@@ -282,6 +290,7 @@
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
               <h3 class="nombres">Mar del plata</h3>
+              <div class="borde"></div>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
               <button class="button-model" id="myBtn">Detalle</button>
@@ -323,6 +332,7 @@
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
               <h3 class="nombres">Mendoza</h3>
+              <div class="borde"></div>
               <h2 class="precios">$6700</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
               <button class="button-model" id="myBtn">Detalle</button>
@@ -364,6 +374,7 @@
             <i class="fa-solid fa-plane-departure"></i>
             <div class="nombres-precios">
               <h3 class="nombres">Merlo</h3>
+              <div class="borde"></div>
               <h2 class="precios">$8900</h2>
               <h4 class="tarifa">Tarifa por una persona</h4>
               <button class="button-model" id="myBtn">Detalle</button>
@@ -403,8 +414,8 @@
       />
       <section class="articulo">
         <i class="fa-solid fa-plane-departure"></i>
-        <div class="nombres-precios">
           <h3 class="nombres">San Carlos Bariloche</h3>
+          <div class="borde"></div>
           <h2 class="precios">$8900</h2>
           <h4 class="tarifa">Tarifa por una persona</h4>
           <button class="button-model" id="myBtn">Detalle</button>
