--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,16 +2,20 @@
 
 .stylebutton {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
   margin: 0 0 20px 0;
+  width: 80%;
+  text-align: center;
 }
+
 .contenedor {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
+  width: 100%;
 }
 
 h1{
@@ -25,6 +29,8 @@ h1{
   border-radius: 20px;
   border: 1px solid #ccc;
   padding: 5px 10px;
+  width: 100%;
+  outline: none;
 }
 
 .recordarme{
