--- a/src/views/register.html
+++ b/src/views/register.html
@@ -81,13 +81,6 @@
                 <input class="styleinput"  type='email' name="email" id="email" placeholder="Indique su email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
             </div>
             </article>
-<!--             <article class="stylearticle">           
-            <div class="styledate">
-                <label for="foto">Foto de perfil</label>
-                <br>
-                <input type='file' name="foto" id="foto" accept=".jpg" placeholder="Inserte foto de usuari@" required>
-            </div>
-            </article> -->
             <article class="stylearticle">
             <div class="styledate">
                 <label for="name">Nombre</label>
@@ -114,54 +107,18 @@
                   <input class="styleinput"  type='tel' name="phone" id="phone" placeholder="Indique su número telefónico" pattern="[0-9]{4}+-[0-9]{4}+-[0-9.-]{4}$" required>
               </div>
               </article>
-<!--             <article class="stylearticle">
-            <div class="styledate">
-                <label for="domicilio"></label>
-                <br>
-                <input type='text' name="domicilio" id="domicilio" placeholder="Indique su domicilio" required>
-            </div>
-            <div class="styledate">
-                <label for="ciudad"></label>
-                <br>
-                <input type='text' name="ciudad" id="ciudad" placeholder="Indique su ciudad" required>
-            </div>
-            </article>
-            <article class="stylearticle">
-            <div class="styledate">
-                <label for="provincia"></label>
-                <br>
-                <input type='text' name="provincia" id="provincia" placeholder="Indique su provincia" required>
-            </div>
-            <div class="styledate">
-                <label for="provincia"></label>
-                <br>
-                <input type='text' name="pais" id="pais" placeholder="Indique su pais" required>
-            </div>
-            </article> -->
-<!--             <article class="stylearticle">
-            <div class="stylecategories">
-                <label for="categorias">Categorias de Interés</label>
-                <br>
-                    <input type="checkbox" name="categorias">Montañas
-                    <input type="checkbox" name="categorias">Playas
-                    <input type="checkbox" name="categorias">Visitas históricas
-                    <input type="checkbox" name="categorias">Paisajes
-                    <input type="checkbox" name="categorias">Excursiones
-                    <input type="checkbox" name="categorias">Comidas
-           
-            </article> -->
             <article class="stylearticle">
             <div class="styledate">
                 <label for="password">Password</label>
                 <br>
-                <input class="styleinput"  type='password' name="password" id="password" placeholder="Password" pattern=".{6,}" title="6 o mas caracteres" required>
+                <input class="styleinput"  type='password' name="password" id="password" placeholder="Contraseña" pattern=".{6,}" title="6 o mas caracteres" required>
             </div>
             </article>
             <article class="stylearticle">
             <div class="styledate">
                 <label for="confpassword">Confirmar Password</label>
                 <br>
-                <input class="styleinput"  type='password' name="confpassword" id="confpassword" placeholder="Confirme Password" pattern=".{6,}" title="6 o mas caracteres" required>
+                <input class="styleinput"  type='password' name="confpassword" id="confpassword" placeholder="Confirme Contraseña" pattern=".{6,}" title="6 o mas caracteres" required>
             </div>
             </article>
           </section>
