--- a/public/css/login.css
+++ b/public/css/login.css
@@ -53,20 +53,21 @@ h1{
   justify-content: space-evenly;
   margin: 0 0 20px 0;
 }
+
 button {
   font-size: 14px;
-  color: white;
+  color: var(--blanco);
   border: 2px transparent solid;
   background-color: var(--logo);
   border-radius: 50px;
   justify-content: center;
-  width: 20%;
+  width: 45%;
   margin: 10px 20px 10px;
-  padding: 10px;
+  padding: 20px;
   transition-property: background-color;
   transition-duration: 450ms;
 }
 
-button:hover {
+button:hover{
   background-color: var(--hooverbutton);
 }
