--- a/public/css/register.css
+++ b/public/css/register.css
@@ -22,19 +22,7 @@
 
 .register{
     width: 90%;
-/*     display: flex;
-    flex-direction: column;
-    align-items: center; */
 }
-
-/* Formato de Caja con 2 items */
-
-/* .stylearticle{
-    font-size: 12px;
-    display: flex;
-    align-items: stretch;
-    justify-content:space-evenly;
-} */
 
 /* Formato de Item */
 
@@ -75,11 +63,11 @@ label{
 .styleinput{
     display: flex;
     color: rgb(70, 69, 69);
-    border: none;
-    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+    padding: 5px 10px;
     width:65%;
     box-shadow: 0px 0px 00px rgba(0, 0, 0, 0.16);
-    border-radius: 5px;
     cursor: pointer;
     transition:all 200ms;
     position: relative;
@@ -98,19 +86,3 @@ label{
 .displaybutton{
     margin: 20px 30px;
 }
-
-/* button {
-    color: white;
-    background-color: var(--logo);
-    border-radius: 5px;
-    justify-content: center;
-    width: 20%;
-    margin: 10px;
-    padding: 10px;
-    transition-property: background-color;
-    transition-duration: 450ms;
-}
-
-button:hover{
-    background-color: var(--hooverbutton);
-} */
