integracion de patron  MVC

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -87,7 +87,7 @@
                 <a class="nav-link" href="#">Traslados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="session.html">Iniciar Sesión</a>
+                <a class="nav-link" href="/session">Iniciar Sesión</a>
               </li>
               <li class="nav-item">
                 <i class="fas fa-headphones-alt"></i>
@@ -99,7 +99,7 @@
                 <i class="fas fa-shopping-cart"></i>
                 <a
                   class="nav-link"
-                  href="productCart.html"
+                  href="/productCart"
                   style="position: absolute"
                   ;
                 ></a>
