--- a/src/views/session.html
+++ b/src/views/session.html
@@ -49,7 +49,7 @@
                   <a class="nav-link" href="#">Traslados</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="session.html">Iniciar Sesión</a>
+                  <a class="nav-link" href="/session">Iniciar Sesión</a>
                 </li>
                 <li class="nav-item">
                   <i class="fas fa-headphones-alt"></i>
@@ -57,7 +57,7 @@
               </li>
                 <li class="nav-item carrito" style="display:flex";>
                   <i class="fas fa-shopping-cart"></i>
-                  <a class="nav-link" href="productCart.html" style="position:absolute"; ></a>
+                  <a class="nav-link" href="/productCart" style="position:absolute"; ></a>
               </li>
             </ul>
             <form role="search">
@@ -71,11 +71,11 @@
       <div class="stylesession">
       <article class="stylebutton">
         <h2>Si no está registrado ingrese aquí</h2>
-            <button type="register"><a class="nav-link" href="register.html">Registrese</a></button>
+            <button type="register"><a class="nav-link" href="/register">Registrese</a></button>
       </article> 
       <article class="stylebutton">  
         <h2>Si ya tiene cuenta ingrese aquí</h2>       
-            <button type="login"><a class="nav-link" href="login.html">Login</a></button>
+            <button type="login"><a class="nav-link" href="/login">Login</a></button>
       </article>
       </div>  
     </main>
