--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="#">Traslados</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="session.html">Iniciar Sesión</a>
+                            <a class="nav-link" href="/session">Iniciar Sesión</a>
                         </li>
                         <li class="nav-item">
                             <i class="fas fa-headphones-alt"></i>
@@ -59,7 +59,7 @@
                         </li>
                         <li class="nav-item carrito" style="display:flex";>
                             <i class="fas fa-shopping-cart"></i>
-                            <a class="nav-link" href="productCart.html" style="position:absolute"; ></a>
+                            <a class="nav-link" href="/productCart" style="position:absolute"; ></a>
                         </li>
                     </ul>
                     <form role="search">
