--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,34 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="En Nos Vamos Volando las mejores ofertas de paquetes turísticos, alquiler de autos y cruceros. Reserva ahora con el mejor precio y servicio"
-    />
+    <meta name="description" content="En Nos Vamos Volando las mejores ofertas de paquetes turísticos, alquiler de autos y cruceros. Reserva ahora con el mejor precio y servicio"/>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css" />
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <title>Nos Vamos Volando</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/design/android-chrome-192x192.png"
-    />
-    <meta
-      name="keywords"
-      content="viajes,vuelos,agencia,viaje,destinos,paquetes,turismo,avion,pasajes,vacaciones"
-    />
+    <link rel="icon" type="image/x-icon" href="/design/android-chrome-192x192.png"/>
+    <meta name="keywords" content="viajes,vuelos,agencia,viaje,destinos,paquetes,turismo,avion,pasajes,vacaciones"/>
     <!-------vinculo hoja de estilo normalize-->
     <link rel="stylesheet" href="/css/normalize.css" />
     <!-- Iconos -->
-    <script
-      src="https://kit.fontawesome.com/807c729568.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://kit.fontawesome.com/807c729568.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"rel="stylesheet"/>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/index.css" />
     <!-----------vinculo hoja de estilo modal y js-->
@@ -40,77 +24,11 @@
     <!------fuente Poppins google fonts------->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,500;1,100;1,200;1,400&family=Poppins:wght@200;300;400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap" rel="stylesheet"/>
   </head>
   <body>
-    <header>
-      <nav
-        class="navbar navbar-expand-lg navbar-light"
-        
-      >
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">
-            <img
-              id="logo"
-              src="/design/Logo_volando.png"
-              width="50"
-              height="50"
-              alt="logo"
-            />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarsExample04"
-            aria-controls="navbarsExample04"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarsExample04">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Paquetes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Vuelos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Alojamiento</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Traslados</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/session">Iniciar Sesión</a>
-              </li>
-              <li class="nav-item">
-                <i class="fas fa-headphones-alt"></i>
-                <a class="nav-link headphones" href="tel:0810 888 810"
-                  >Para Ventas <strong>0810 888 810</strong></a
-                >
-              </li>
-              <li class="nav-item carrito" style="display: flex" ;>
-                <i class="fas fa-shopping-cart"></i>
-                <a
-                  class="nav-link"
-                  href="/productCart"
-                  style="position: absolute"
-                  ;
-                ></a>
-              </li>
-            </ul>
-            <!--   <form role="search">
-                <input class="form-control" type="search" placeholder="Encontrá tu destino" aria-label="Search" style="width:20rem">
-            </form> -->
-          </div>
-        </div>
-      </nav>
+    <%- include('partials/header.ejs'); -%>
+    <main>
       <div class="contenedor">
         <form action="" class="search-bar">
           <input type="text" placeholder="Busca tu destino" name="q" />
@@ -119,9 +37,6 @@
           </button>
         </form>
       </div>
-      <!--  <img class="img-navbar" src="/design/fondo.jpg" alt="image-airport" width="100%" height="100%"/> -->
-    </header>
-    <main>
       <section class="main">
         <!--------------Titulo Destacados--------------------->
         <div class="row title">
@@ -137,11 +52,7 @@
         </div>
         <section class="destacados">
           <article class="producto">
-            <img
-              src="/img/villa-carlos-paz.jpg"
-              alt="Villa Carlos Paz"
-              class="imagenes"
-            />
+            <img src="/img/villa-carlos-paz.jpg" alt="Villa Carlos Paz" class="imagenes"/>
             <section class="articulo">
               <i class="fa-solid fa-plane-departure"></i>
               <div class="nombres-precios">
@@ -156,10 +67,7 @@
                 <div id="myModal" class="modal">
                   <div class="modal-content">
                     <span class="close">&times;</span>
-                    <img
-                      src="/img/villa-carlos-paz.jpg"
-                      alt="Imagen del producto"
-                    />
+                    <img src="/img/villa-carlos-paz.jpg" alt="Imagen del producto"/>
                     <p>detalle capilla</p>
                     <div class="desde-hasta">
                       <div class="desde">
@@ -182,11 +90,7 @@
             </section>
           </article>
           <article class="producto">
-            <img
-              src="/img/capilla.jpg"
-              alt="Capilla del monte"
-              class="imagenes"
-            />
+            <img src="/img/capilla.jpg" alt="Capilla del monte" class="imagenes"/>
             <section class="articulo">
               <i class="fa-solid fa-plane-departure"></i>
               <div class="nombres-precios">
@@ -224,11 +128,7 @@
             </section>
           </article>
           <article class="producto">
-            <img
-              src="/img/bariloche.jpeg"
-              alt="Villa Carlos Paz"
-              class="imagenes"
-            />
+            <img src="/img/bariloche.jpeg" alt="Villa Carlos Paz" class="imagenes"/>
             <section class="articulo">
               <i class="fa-solid fa-plane-departure"></i>
               <div class="nombres-precios">
@@ -266,11 +166,7 @@
             </section>
           </article>
           <article class="producto">
-            <img
-              src="/img/cataratas.jpg"
-              alt="Cataratas del iguazu"
-              class="imagenes"
-            />
+            <img src="/img/cataratas.jpg" alt="Cataratas del iguazu" class="imagenes"/>
             <section class="articulo">
               <i class="fa-solid fa-plane-departure"></i>
               <div class="nombres-precios">
@@ -456,7 +352,7 @@
                   <div class="modal-content">
                     <span class="close">&times;</span>
                     <img src="/img/bariloche.jpg" alt="Imagen del producto" />
-                    <p>detalle bariloche</p>
+                    <p>detalle Bariloche</p>
                     <div class="desde-hasta">
                       <div class="desde">
                         <label for="desde">Desde:</label>
@@ -470,7 +366,7 @@
                           <input type="date" id="hasta" value="fecha_actual" />
                         </div>
                       </div>
-                      <button class="button-model">Agregar viaje</button>
+                      <button class="button-model">Agregar Viaje</button>
                     </div>
                   </div>
                 </div>
@@ -480,88 +376,7 @@
         </section>
       </section>
     </main>
-    <!--------------Redes Sociales--------------------->
-    <section class="hidden-xs">
-      <div class="container">
-        <ul class="list-unstyled list-inline">
-          <li>
-            <a href="https://www.instagram.com/" target="_blank">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://es-la.facebook.com/" target="_blank">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://www.twitter.com/" target="_blank">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="https://www.linkedin.com/" target="_blank">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <footer>
-      <div
-        class="eva-3-row footer-logos-container -eva-3-hide-small -fluid -no-gutter"
-        style="display: flex"
-      >
-        <div class="footer-logo-item">
-          <img
-            src="/design/descarga4.webp"
-            alt="Iata"
-            title="Iata"
-            class="footer-image-item"
-          />
-        </div>
-        <div class="footer-logo-item">
-          <a
-            href="http://www.jus.gov.ar/datos-personales.aspx/"
-            target="_blank"
-            rel="nofollow noopener"
-          >
-            <img
-              src="/design/descarga3.webp"
-              alt="Pdp"
-              title="Pdp"
-              class="footer-image-item"
-            />
-          </a>
-        </div>
-        <div class="footer-logo-item">
-          <a
-            href="http://qr.afip.gob.ar/?qr=7ynzfbEsT3bJi2hL6MRo6w,,"
-            target="_blank"
-            rel="nofollow noopener"
-          >
-            <img
-              src="/design/descarga.jpeg"
-              alt="Data Fiscal"
-              title="Data Fiscal"
-              class="footer-image-item"
-            />
-          </a>
-        </div>
-        <div class="footer-logo-item">
-          <a
-            href="http://servicios.turismo.gob.ar/agencias/constancia/legajo/10680"
-            target="_blank"
-            rel="nofollow noopener"
-          >
-            <img
-              src="/design/descarga2.jpeg"
-              alt="Ministerio de Turismo"
-              title="Ministerio de Turismo"
-              class="footer-image-item"
-            />
-          </a>
-        </div>
-      </div>
-      <p class="copyright">
-        &copy;Digital House 2022 | Powered and designed by Group 10 Desarrollo
-        Full Stack
-      </p>
-    </footer>
+    <%- include('partials/footer.ejs'); -%>
 
     <!--     <script>
       const webLogo = document.querySelector('#logo')
