--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,6 +24,12 @@
             <li class="nav-item">
               <a class="nav-link" href="/session">Iniciar Sesión</a>
             </li>
+            <li class="nav-itme">
+              <a class="nav-link" href="/formCarga">Cargar Producto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/modifProducto">Modificar Producto</a>
+            </li>
             <li class="nav-item">
               <i class="fas fa-headphones-alt"></i>
               <a class="nav-link headphones" href="tel:0810 888 810">Para Ventas <strong>0810 888 810</strong></a>
