agregando estilos a los formularios

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,6 +4,7 @@
     <%- include('partials/head.ejs'); -%>
     <!-------vinculo hoja de estilo css-->
     <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/style.css">
     <!-----------vinculo hoja de estilo modal y js-->
     <link rel="stylesheet" href="/css/modal.css" />
     <script src="/js/modal.js"></script>
@@ -20,18 +21,6 @@
         </form>
       </div>
       <section class="main">
-        <!--------------Titulo Destacados--------------------->
-        <div class="row title">
-          <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
-            <hr />
-          </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-            <h3>Destacados</h3>
-          </div>
-          <div class="col-xl-4 col-lg-4 col-md-3 col-sm-3 col-12">
-            <hr />
-          </div>
-        </div>
         <section class="destacados">
           <article class="producto">
             <img src="/img/villa-carlos-paz.jpg" alt="Villa Carlos Paz" class="imagenes"/>
