--- a/public/css/formCarga.css
+++ b/public/css/formCarga.css
@@ -32,7 +32,7 @@ form {
     padding: 5px;
     margin-bottom: 10px;
     border-radius: 8px;
-    
+    outline: none;
   }
 
   input[type="number"]{
@@ -40,7 +40,7 @@ form {
     padding: 5px;
     margin-bottom: 10px;
     border-radius: 8px;
-    
+    outline: none;
   }
   
   input[type="submit"] {
@@ -75,7 +75,7 @@ form {
     margin-top: 10px;
     border-radius: 8px;
     width: 70%;
-    
+    outline: none;
   }
   .custom-file-input::before {
     content: "Elige un archivo";
