--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample04">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Paquetes</a>
+              <a class="nav-link" href="/paquetes">Paquetes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Vuelos</a>
