--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -9,44 +9,33 @@
     <%- include('partials/header.ejs'); -%>
     <main class="background-img">
       <div class="background-form">
-        <h2 class="registertitle">Mi cuenta</h2>
+        <h2 class="registertitle">Crear nueva cuenta</h2>
         <section class="styleform">
         <form action="/register" method="post" class="register">
-            <article class="stylearticle">
-            <div class="styledate">
-                <label for="email">Usuario</label>
-                <br>
-                <input class="styleinput"  type='email' name="email" id="email" placeholder="Indique su email" value=" <%= locals.oldData ? oldData.email:null %>">
-                <% if (locals.errors && errors.name){%>
-                  <div class="text-danger">
-                  <%= errors.name.msg %>
-                  </div>
-            </div>
-            <%}%>
-            </article>
-            <article class="stylearticle">
+          <legend class="legend">
+            <span>Información Personal</span>
+          </legend>
+          <article class="stylearticle">
             <div class="styledate">
                 <label for="name">Nombre</label>
                 <br>
-                  <input class="styleinput" type='text' name="name" id="name" placeholder="Indique su nombre" maxlength="60" mb-form-field-input="" value=" <%= locals.oldData ? oldData.name:null %>" > 
+                <input class="styleinput" type='text' name="name" id="name" placeholder="Indique su nombre" maxlength="40" mb-form-field-input="" value="<%= locals.oldData ? oldData.name:null %>" > 
                   <% if (locals.errors && errors.name){%>
-                    <div class="text-danger">
-                    <%= errors.name.msg %>
-                    </div>
-                    <%}%>
+                      <div class="text-danger">
+                         <%= errors.name.msg %>
+                      </div>
+                  <%}%>
             </div>
             <div class="styledate">
-                <label for="surname">Apellido</label>
-                <br>
-                <input class="styleinput"  type='text' name="surname" id="surname" placeholder="Indique su apellido" maxlength="60" mb-form-field-input="" value=" <%= locals.oldData ? oldData.surname:null %>" >
+              <label for="name">Apellido</label>
+              <br>
+              <input class="styleinput" type='text' name="surname" id="surname" placeholder="Ingrese su apellido" maxlength="40" mb-form-field-input="" value="<%= locals.oldData ? oldData.surname:null %>" > 
                 <% if (locals.errors && errors.surname){%>
-                  <div class="text-danger">
-                    <%= errors.surname.msg %>
-                  </div>
-                <%}%>
-            </div>
-            </article>
-            <article class="stylearticle">
+              <div class="text-danger">
+                <%= errors.surname.msg %>
+              </div>
+              <%}%>
+          </div> 
             <div class="styledate">
                 <label for="birthdate">Fecha de nacimiento</label>
                 <br>
@@ -56,13 +45,21 @@
                     <%= errors.birthdate.msg %>
                   </div>
                   <%}%>
-                  </div>
-            </article>
-            <article class="stylearticle">
+            </div>
+            <div class="styledate">
+                <label for="name">DNI</label>
+                <br>
+                <input class="styleinput" type='text' name="dni" id="dni" placeholder="Ingrese su número DNI" maxlength="7" mb-form-field-input="" value="<%= locals.oldData ? oldData.dni:null %>" > 
+                  <% if (locals.errors && errors.dni){%>
+                <div class="text-danger">
+                  <%= errors.dni.msg %>
+                </div>
+                <%}%>
+            </div>      
               <div class="styledate">
                   <label for="phone">Teléfono</label>
                   <br>
-                  <input class="styleinput"  type='tel' name="phone" id="phone" placeholder="Indique su número telefónico" value=" <%= locals.oldData ? oldData.phone:null %>" >
+                  <input class="styleinput"  type='tel' name="phone" id="phone" placeholder="Indique su número telefónico" value="<%= locals.oldData ? oldData.phone:null %>" >
                   <% if (locals.errors && errors.phone){%>
                     <div class="text-danger">
                       <%= errors.phone.msg %>
@@ -70,7 +67,20 @@
                   <%}%>
               </div>
               </article>
-            <article class="stylearticle">
+              <legend>
+                <span>Información de Login</span>
+              </legend>
+              <article class="stylearticle">
+                <div class="styledate">
+                    <label for="email">Usuario</label>
+                    <br>
+                    <input class="styleinput"  type='email' name="email" id="email" placeholder="Indique su email" value="<%= locals.oldData ? oldData.email:null %>">
+                    <% if (locals.errors && errors.email){%>
+                      <div class="text-danger">
+                      <%= errors.email.msg %>
+                      </div>
+                  <%}%>
+                </div>
             <div class="styledate">
                 <label for="password">Contraseña</label>
                 <br>
@@ -81,8 +91,6 @@
                   </div>
                 <%}%>
             </div>
-            </article>
-            <article class="stylearticle">
             <div class="styledate">
                 <label for="confpassword">Confirmar Contraseña</label>
                 <br>
