--- a/public/css/register.css
+++ b/public/css/register.css
@@ -2,6 +2,12 @@
 
 @import url(session.css);
 
+form{
+    width: 90%;
+    margin: 5%;
+
+}
+
 /* Background Conjunto botones */
 
 .background-form{
