--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,16 +9,26 @@
     <%- include('partials/header.ejs'); -%>
           <!-------main------------->
     <main>
-      <div class="contenedor">
+      <form action="/login" method="post" class="contenedor">
         <h1>Ingreso</h1>
         <div class="stylebutton">
             <label for="email">Usuario</label>
-            <input type="email" name="email" id="email" placeholder="Usuario" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" required>
+            <input type="text" name="email" id="email" placeholder="Usuario" >
+            <% if (locals.errors && errors.email){%>
+              <div class="text-danger">
+              <%= errors.email.msg %>
+            </div>
+            <%}%>
         </div>
         <div class="stylebutton">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" placeholder="Contraseña" pattern=".{6,}" title="6 o mas caracteres" required>
-        </div>
+            <input type="password"  name= "password" id="password" placeholder="Contraseña" >
+            <% if (locals.errors && errors.password){%>
+              <div class="text-danger">
+                <%= errors.password.msg %>
+              </div>
+            <%}%>
+          </div>
         <div class="recordarme">
             <input type="checkbox" name="recordarme" id="recordarme">
             <label for="recordarme">Recordarme</label>
@@ -28,7 +38,7 @@
               <a href="#">Olvide mi Contraseña</a>
               <a href="/register">Registrarse</a>
             </div>
-        </div>
+          </form>
     </main>
           <%- include('partials/footer.ejs'); -%>
 
