--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -11,7 +11,7 @@
       <div class="background-form">
         <h2 class="registertitle">Crear nueva cuenta</h2>
         <section class="styleform">
-        <form action="/register" method="post" class="register">
+        <form action="/register" method="POST" enctype="multipart/form-data" class="register">
           <legend class="legend">
             <span>Información Personal</span>
           </legend>
@@ -49,7 +49,7 @@
             <div class="styledate">
                 <label for="name">DNI</label>
                 <br>
-                <input class="styleinput" type='text' name="dni" id="dni" placeholder="Ingrese su número DNI" maxlength="7" mb-form-field-input="" value="<%= locals.oldData ? oldData.dni:null %>" > 
+                <input class="styleinput" type='text' name="dni" id="dni" placeholder="Ingrese su número DNI" maxlength="10" mb-form-field-input="" value="<%= locals.oldData ? oldData.dni:null %>" > 
                   <% if (locals.errors && errors.dni){%>
                 <div class="text-danger">
                   <%= errors.dni.msg %>
@@ -65,6 +65,11 @@
                       <%= errors.phone.msg %>
                     </div>
                   <%}%>
+              </div>
+              <div class="styledate">
+                <label for="imagenUsuario">Imagen de Perfil</label>
+                <br>
+                <input type="file" id= "imagenUsuario" name="imagenUsuario" placeholder="Agregar imagen de perfil"> 
               </div>
               </article>
               <legend>
