--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,7 +22,7 @@
               <a class="nav-link" href="#">Traslados</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/session">Iniciar Sesión</a>
+              <a class="nav-link" href="/session">Ingresar</a>
             </li>
             <li class="nav-itme">
               <a class="nav-link" href="/formCarga">Cargar Producto</a>
